Add RabbitMQ service to docker-compose.yaml
- Adding rabbitmq:management-alpine image
- Exposing ports 5672 for AMQP and 15672 for the management plugin
- Configuring environment variables for default user and password
- Mounting a named volume for persistent RabbitMQ data

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -31,7 +31,19 @@ services:
     env_file:
       - ./.env
 
+  rabbitmq:
+    image: rabbitmq:management-alpine
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+    environment:
+      RABBITMQ_DEFAULT_USER: ${RABBITMQ_USER}
+      RABBITMQ_DEFAULT_PASS: ${RABBITMQ_PASSWORD}
+    volumes:
+      - rabbitmq_data:/var/lib/rabbitmq
+
 volumes:
   mysql_db_data:
   static_volume:
   media_volume:
+  rabbitmq_data:
