--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,6 +5,7 @@ services:
     build:
       context: ./product_service
     container_name: product_service
+    command: daphne config.asgi:application --bind 0.0.0.0 --port 8000
     volumes:
       - ./product_service/:/product_service/
       - static_volume:/product_service/static
