--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,6 +17,18 @@ services:
     env_file:
       - ./.env
 
+  order_service:
+    build:
+      context: ./order_service
+    container_name: order_service
+    command: uvicorn apps.orders.main:app --host 0.0.0.0 --port 8000
+    volumes:
+      - ./order_service/:/order_service/
+    ports:
+      - 8002:8000
+    env_file:
+      - ./.env
+
   mysql_db:
     image: mysql:latest
     container_name: mysql_db
